control-plane/custom-gateway-api/examples/standard/cross-namespace-routing/store-route.yaml
#$ Used in:
#$ - site-src/guides/multiple-ns.md
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: store
  namespace: store-ns
spec:
  parentRefs:
  - name: shared-gateway
    namespace: infra-ns
  rules:
  - matches:
    - path:
        value: /store
    backendRefs:
    - name: store
      port: 8080
